--- a/index.html
+++ b/index.html
@@ -16,59 +16,59 @@
           <tr>
             <td>Dubai</td>
             <td><span align="right" id="dxb"></span></td>
-            <td><span align="right" id="dxbT"></span><img id="dxbTi"></td>
+            <td><span align="right" id="dxbT">N/A</span><img id="dxbTi"></td>
 
           </tr>
           <tr>
             <td>Osnabrück</td>
             <td><span align="right" id="osn"></span></td>
-            <td><span align="right" id="osnT"></span><img id="osnTi"></td>
+            <td><span align="right" id="osnT">N/A</span><img id="osnTi"></td>
           </tr>
           <tr>
             <td>Saudi</td>
             <td><span align="right" id="jed"></span></td>
-            <td><span align="right" id="jedT"></span><img id="jedTi"></td>
+            <td><span align="right" id="jedT">N/A</span><img id="jedTi"></td>
           </tr>
           <tr>
             <td>Kuwait</td>
             <td><span align="right" id="kwi"></span></td>
-            <td><span align="right" id="kwiT"></span><img id="kwiTi"></td>
+            <td><span align="right" id="kwiT">N/A</span><img id="kwiTi"></td>
           </tr>
 
           <tr>
             <td>Pakistan</td>
             <td><span align="right" id="pak"></span></td>
-            <td><span align="right" id="pakT"></span><img id="pakTi"></td>
+            <td><span align="right" id="pakT">N/A</span><img id="pakTi"></td>
           </tr>
           <tr>
             <td>India</td>
             <td><span align="right" id="ind"></span></td>
-            <td><span align="right" id="indT"></span><img id="indTi"></td>
+            <td><span align="right" id="indT">N/A</span><img id="indTi"></td>
           </tr>
           <tr>
             <td>Srilanka</td>
             <td><span align="right" id="sri"></span></td>
-            <td><span align="right" id="sriT"></span><img id="sriTi"></td>
+            <td><span align="right" id="sriT">N/A</span><img id="sriTi"></td>
           </tr>
           <tr>
             <td>Bangladesh</td>
             <td><span align="right" id="bng"></span></td>
-            <td><span align="right" id="bngT"></span><img id="bngTi" ></td>
+            <td><span align="right" id="bngT">N/A</span><img id="bngTi" ></td>
           </tr>
           <tr>
             <td>Hong Kong</td>
             <td><span align="right" id="hng"></span></td>
-            <td><span align="right" id="hngT"></span><img id="hngTi"></td>
+            <td><span align="right" id="hngT">N/A</span><img id="hngTi"></td>
           </tr>
           <tr>
             <td>Melbourne</td>
             <td><span align="right" id="mel"></span></td>
-            <td><span align="right" id="melT"></span><img id="melTi"></td>
+            <td><span align="right" id="melT">N/A</span><img id="melTi"></td>
           </tr>
           <tr>
             <td>New Zealand</td>
             <td><span align="right" id="wel"></span></td>
-            <td><span align="right" id="welT"></span><img id="welTi"></td>
+            <td><span align="right" id="welT">N/A</span><img id="welTi"></td>
           </tr>
         </table>
 
