--- a/index.html
+++ b/index.html
@@ -15,63 +15,68 @@
           </tr>
           <tr>
             <td>Dubai</td>
-            <td><span align="right" id="dxb"></span></td>
+            <td><span align="right" id="dxb">00:00:00</span></td>
             <td><span align="right" id="dxbT">N/A</span><img id="dxbTi"></td>
-
           </tr>
           <tr>
             <td>Osnabrück</td>
-            <td><span align="right" id="osn"></span></td>
+            <td><span align="right" id="osn">00:00:00</span></td>
             <td><span align="right" id="osnT">N/A</span><img id="osnTi"></td>
           </tr>
           <tr>
             <td>Saudi</td>
-            <td><span align="right" id="jed"></span></td>
+            <td><span align="right" id="jed">00:00:00</span></td>
             <td><span align="right" id="jedT">N/A</span><img id="jedTi"></td>
           </tr>
           <tr>
             <td>Kuwait</td>
-            <td><span align="right" id="kwi"></span></td>
+            <td><span align="right" id="kwi">00:00:00</span></td>
             <td><span align="right" id="kwiT">N/A</span><img id="kwiTi"></td>
           </tr>
 
           <tr>
             <td>Pakistan</td>
-            <td><span align="right" id="pak"></span></td>
+            <td><span align="right" id="pak">00:00:00</span></td>
             <td><span align="right" id="pakT">N/A</span><img id="pakTi"></td>
           </tr>
           <tr>
             <td>India</td>
-            <td><span align="right" id="ind"></span></td>
+            <td><span align="right" id="ind">00:00:00</span></td>
             <td><span align="right" id="indT">N/A</span><img id="indTi"></td>
           </tr>
           <tr>
             <td>Srilanka</td>
-            <td><span align="right" id="sri"></span></td>
+            <td><span align="right" id="sri">00:00:00</span></td>
             <td><span align="right" id="sriT">N/A</span><img id="sriTi"></td>
           </tr>
           <tr>
             <td>Bangladesh</td>
-            <td><span align="right" id="bng"></span></td>
+            <td><span align="right" id="bng">00:00:00</span></td>
             <td><span align="right" id="bngT">N/A</span><img id="bngTi" ></td>
           </tr>
           <tr>
             <td>Hong Kong</td>
-            <td><span align="right" id="hng"></span></td>
+            <td><span align="right" id="hng">00:00:00</span></td>
             <td><span align="right" id="hngT">N/A</span><img id="hngTi"></td>
           </tr>
           <tr>
             <td>Melbourne</td>
-            <td><span align="right" id="mel"></span></td>
+            <td><span align="right" id="mel">00:00:00</span></td>
             <td><span align="right" id="melT">N/A</span><img id="melTi"></td>
           </tr>
           <tr>
             <td>New Zealand</td>
-            <td><span align="right" id="wel"></span></td>
+            <td><span align="right" id="wel">00:00:00</span></td>
             <td><span align="right" id="welT">N/A</span><img id="welTi"></td>
           </tr>
         </table>
 
+        <table>
+          <tr>
+            <td>DATE:</td>
+            <td><span align="right" id="dat">0-0-0</span></td>
+          </tr>
+        </table>
     <script type="text/javascript" src="function.js"></script>
 
   </body>
