added miami time and weather

--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
             <td><span align="right" id="wel">00:00:00</span></td>
             <td><span align="right" id="welT">N/A</span><img id="welTi"></td>
           </tr>
+          <tr>
+            <td>Miami</td>
+            <td><span align="right" id="mia">00:00:00</span></td>
+            <td><span align="right" id="miaT">N/A</span><img id="welTi"></td>
+          </tr>
         </table>
 
         <table>
